--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.injected.testOnly=false
-android.enableDexingArtifactTransform.desugaring=false
+android.enableDexingArtifactTransform.desugaring=true
+android.disableAutomaticComponentCreation=true
