--- a/lib_banner/build.gradle
+++ b/lib_banner/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+
     compileSdk rootProject.android.compileSdk
 
     defaultConfig {
@@ -30,11 +31,19 @@ android {
 }
 
 dependencies {
-    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly rootProject.depsLibs.coreKtx
-    compileOnly rootProject.depsLibs.appcompat
-    compileOnly rootProject.depsLibs.material
-    compileOnly rootProject.depsLibs.constraintlayout
+//    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+//    compileOnly rootProject.depsLibs.coreKtx
+//    compileOnly rootProject.depsLibs.appcompat
+//    compileOnly rootProject.depsLibs.material
+//    compileOnly rootProject.depsLibs.constraintlayout
+//
+//    compileOnly project(path: ':lib_framework')
 
-    compileOnly project(path: ':lib_framework')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation rootProject.depsLibs.coreKtx
+    implementation rootProject.depsLibs.appcompat
+    implementation rootProject.depsLibs.material
+    implementation rootProject.depsLibs.constraintlayout
+
+    implementation project(path: ':lib_framework')
 }
