--- a/mod_main/build.gradle
+++ b/mod_main/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     compileOnly project(path: ':lib_glide')
     compileOnly project(path: ':lib_room')
 
+    compileOnly "com.guolindev.permissionx:permissionx:1.6.4"
 }
