--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.sum.tea">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sum.tea">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!--检查网络权限-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-feature android:name="android.hardware.camera.any" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!--存储图像或者视频权限-->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-            tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <!--allowBackup:应用数据是否能能够被备份或恢复-->
     <application
-            android:name=".SumApplication"
-            android:allowBackup="false"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:usesCleartextTraffic="false"
-            android:networkSecurityConfig="@xml/network_security_config"
-            tools:targetApi="31">
+        android:name=".SumApplication"
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
         <activity
-                android:name="com.sum.main.ui.SplashActivity"
-                android:launchMode="singleTask"
-                android:windowSoftInputMode="adjustPan"
-                android:theme="@style/SplashAppTheme"
-                android:exported="true">
+            android:name="com.sum.main.ui.SplashActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:theme="@style/SplashAppTheme"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,11 +39,11 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.sum.main.MainActivity"
-                android:launchMode="singleTask"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="adjustPan"
-                android:exported="true"/>
+            android:name="com.sum.main.MainActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
         <!--7.0需要做URI适配
         authorities：相当于一个用于认证的暗号，在分享文件生成Uri时，会通过它的值生成对应的Uri。值是一个域名，一般格式为<包名>.fileprovider
@@ -48,14 +51,14 @@
         grantUriPermissions:能授权接收端的app临时访问权限
         -->
         <provider
-                android:name="androidx.core.content.FileProvider"
-                android:authorities="${applicationId}.fileProvider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <!--这里的name就在FileProvider源码里面,resource需要指定一个xml文件-->
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/data_extraction_rules" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/data_extraction_rules" />
         </provider>
     </application>
 
