--- a/mod_login/build.gradle
+++ b/mod_login/build.gradle
@@ -64,6 +64,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.annotation:annotation:1.6.0'
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly rootProject.depsLibs.coreKtx
     compileOnly rootProject.depsLibs.appcompat
